# atlas-design-pattern-juni-2025

./: .gitignore  README.md  Tag3_01Composite.7z
HalloWelt/: CMakeLists.txt
Tag1_01Decorator/: CMakeLists.txt  main.cpp
Tag1_01Decorator/client/: CalcClient.h
Tag1_01Decorator/math/: Calculator.cpp  Calculator.h  CalculatorFactory.h  CalculatorImpl.h  CalculatorLoggerDecorator.h  CalculatorSecureDecorator.h
Tag1_02Singleton/: CMakeLists.txt  Singleton.h
Tag1_04Visitor/: CMakeLists.txt  main.cpp
Tag1_04Visitor/firma/: Firma.h
Tag1_04Visitor/mitarbeiter/: AbstractMitarbeiter.h  GehaltsEmpfaenger.h  LohnEmpfaenger.h
Tag1_05State/: CMakeLists.txt  FrontController.cpp  FrontController.h  main.cpp
Tag1_05State/state/: AbstractState.h  State.h  StateA.h  StateB.h
Tag1_06TrafficLight#/: main.cpp
Tag1_06TrafficLight#/trafficlight/: TrafficLight.cpp  TrafficLight.h
Tag2_01Observer/: CMakeLists.txt  main.cpp
Tag2_01Observer/tiere/: PigTooFatListener.h  Schwein.h  Tier.h
Tag2_02Command/: CMakeLists.txt  main.cpp
Tag2_02Command/command/: AbstractCommand.h  AddCommand.h  CommandFactory.h  CommandHistory.h  PrintCommand.h
Tag2_02Command/math/: Calculator.h
Tag2_03FlyWeight/: AttributedCharacter.h  CMakeLists.txt  main.cpp
Tag2_03Iterator/: CMakeLists.txt  main.cpp
Tag2_03Memento/: CMakeLists.txt  main.cpp
Tag2_03Memento/tiere/: Schwein.h  SchweineMemento.h
Tag2_04Template/: main.cpp
Tag3_01Composite/: CMakeLists.txt  main.cpp
Tag3_01Composite/composite/: Leaf.h  (+2 more)
Tag3_03Bank/: CMakeLists.txt  main.cpp
Tag3_04Builder/: Person.h  main.cpp
(+10 files in other folders)
